BEGIN TRANSACTION;
CREATE TABLE IF NOT EXISTS "MARK" (
	"ID_STUDENT"	INTEGER,
	"ID_COURSE"	INTEGER,
	"MARK"	INTEGER,
	"DATE"	TEXT,
	FOREIGN KEY("ID_STUDENT") REFERENCES "STUDENT"("ID"),
	FOREIGN KEY("ID_COURSE") REFERENCES "COURSE"("ID")
);
CREATE TABLE IF NOT EXISTS "ENROLMENT" (
	"ID_STUDENT"	INTEGER,
	"ID_COURSE"	INTEGER,
	FOREIGN KEY("ID_COURSE") REFERENCES "COURSE"("ID"),
	FOREIGN KEY("ID_STUDENT") REFERENCES "STUDENT"("ID")
);
CREATE TABLE IF NOT EXISTS "COURSE" (
	"ID"	INTEGER PRIMARY KEY AUTOINCREMENT,
	"NAME"	TEXT,
	"DESCRIPTION"	TEXT
);
CREATE TABLE IF NOT EXISTS "STUDENT" (
	"ID"	INTEGER PRIMARY KEY AUTOINCREMENT,
	"NAME"	TEXT,
	"SURNAME"	TEXT,
	"EMAIL"	TEXT UNIQUE
);
INSERT INTO "MARK" VALUES (1,3,5,'20-11-2018');
INSERT INTO "MARK" VALUES (2,2,1,'15-12-2018');
INSERT INTO "MARK" VALUES (2,2,3,'26-02-2019');
INSERT INTO "MARK" VALUES (2,1,2,'22-06-2019');
INSERT INTO "ENROLMENT" VALUES (2,2);
INSERT INTO "ENROLMENT" VALUES (1,3);
INSERT INTO "ENROLMENT" VALUES (2,1);
INSERT INTO "COURSE" VALUES (1,'Phylosophy','Plilosophy for bowlers');
INSERT INTO "COURSE" VALUES (2,'Calculus','Calculus for bowling game');
INSERT INTO "COURSE" VALUES (3,'Modern Art','The modern and innovatice approach to art');
INSERT INTO "STUDENT" VALUES (1,'Maude','Lebowski','j.lebowski@dude.com');
INSERT INTO "STUDENT" VALUES (2,'Jeffrey','Lebowski','b.lebowski@dude.com');
INSERT INTO "STUDENT" VALUES (3,'Bunny','Lebowski','bu.lebowski@dude.com');
COMMIT;
